# rust-portfolio-website

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  style.css
CSS/: style.css  style.css.map
assets/video/: connectFourWebM.webm  liftingHistoryWEBM.webm  sheetGeneratorWEBM.webm
sass/: style.scss
sass/components/: _banner.scss  _contact.scss  _index.scss  _liftlog.scss  _navbar.scss  _projects.scss  _videos.scss
src/: banner.rs  contact.rs  liftlog.rs  main.rs  navbar.rs  projects.rs  videos.rs
