[package]
name = "rust-portfolio"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
gloo-events = "0.1"
yew-router = { git = "https://github.com/yewstack/yew.git" }
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
js-sys = "0.3.60"

[dependencies.web-sys]
version = "0.3.60"
# We need to enable all the web-sys features we want to use!
features = [
    "console",
    "Document",
    "Window",
    "Element",
    "DomTokenList",
    "HtmlMediaElement",
    "HtmlDivElement",
    "HtmlCollection",
    "Node",
]